# galette-paper

./: .gitignore  Cargo.toml  README.md  distribute.sh  machines.toml  pktgen-measure.lua
backend/: Cargo.toml
backend/src/: lib.rs  message.rs  sequencer.rs  server.rs  stream.rs
config/: Cargo.toml
config/src/: experiment.rs  lib.rs  range.rs
device/: Cargo.toml
device/src/: cli.rs  lib.rs  main.rs
instances/: baseline-nuc.ron  baseline-pi.ron  kern-vs-user-nuc.ron  kern-vs-user-rpi.ron  kern-vs-user.ron  kxdp-blocking-n-nuc.ron  kxdp-blocking-n-rpi.ron  kxdp-blocking.ron  loadbalance-lastrpi.ron  loadbalance.ron  poll-user-nuc.ron  poll-user-rpi.ron  poll-user.ron  simple-mcore.ron  simple-nuc.ron  simple-rpi.ron  user-blocking-n-nuc.ron  user-blocking-n-rpi.ron  user-blocking.ron
instances/bases/: base-full.ron  base.ron
paper/: .gitignore  bibliography.bib  paper-camera.tex  paper.tex  talk.nav  talk.tex
paper/diagrams/: arch.tex  dplane-user.tex  dplane-xdp.tex  offloading.tex  pufc.tex  two-tier.tex
paper/images/: extras-imgs.afdesign
paper/listings/: loadbalance.toml  macswap.rs  security.toml
plots/config/: preamble.cfg
results/: blocking-nf-data-c-new.py  blocking-nf-data-c.py  blocking-nf-data-new.py  blocking-nf-data.py  collate-tputs.py  full-process.py
results/2022-11-29/: t-summary-0.1M-kxdp-rpi  t-summary-0.1M-uxdp-rpi  t-summary-0.5M-kxdp-rpi  t-summary-0.5M-uxdp-rpi  t-summary-100M-kxdp-rpi  t-summary-100M-uxdp-rpi  t-summary-10M-kxdp-rpi  t-summary-10M-uxdp-rpi  t-summary-1M-kxdp-rpi  t-summary-1M-uxdp-rpi  t-summary-50M-kxdp-rpi  t-summary-50M-uxdp-rpi
results/kxdp/: p-0B-0.5M-1C-kxdp-rpi.csv  p-0B-100M-1C-kxdp-rpi.csv  p-1B-0.1M-1C-kxdp-rpi.csv  p-1B-0.5M-1C-kxdp-rpi.csv  p-1B-10M-1C-kxdp-rpi.csv  p-1B-1M-1C-kxdp-rpi.csv  p-1B-50M-1C-kxdp-rpi.csv  p-2B-0.1M-1C-kxdp-rpi.csv  p-2B-100M-1C-kxdp-rpi.csv  p-3B-50M-1C-kxdp-rpi.csv  p-4B-0.1M-1C-kxdp-rpi.csv  p-4B-0.5M-1C-kxdp-rpi.csv  p-5B-50M-1C-kxdp-rpi.csv  p-6B-10M-1C-kxdp-rpi.csv  p-6B-1M-1C-kxdp-rpi.csv
results/uxdp/: p-0B-10M-1C-uxdp-rpi.csv  p-1B-0.5M-1C-uxdp-rpi.csv  (+14 more)
runner/: Cargo.toml
runner/src/: cli.rs  lib.rs  main.rs
runner/src/subprograms/: make_keys.rs  mod.rs  run.rs
tables/: vs-baselines-new.py  vs-baselines.py
(+14077 files in other folders)
