[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { features = ["derive"], version = "1" }
thiserror = "1"
toml = "0.5"
tokio = { version = "1", default-features = false, features = ["fs"]}
