[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
backend = { path = "../backend" }
chrono = "0.4"
clap = { version = "4", features = ["derive", "error-context", "help", "usage", "wrap_help"] }
config = { path = "../config" }
csv = "1.1"
futures = "0.3"
mac_address = "1"
rcgen = "0.10"
ron = "0.8"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
